--- a/src/components/film-list-item/film-list-item.css
+++ b/src/components/film-list-item/film-list-item.css
@@ -1,21 +1,21 @@
-.film_list_item_container {
+.film_item_container {
     width: 323px;
     display: flex;
     flex-direction: column;
     margin-bottom: 50px;
 }
 
-.film_list_item_img {
+.film_item_img {
     width: 323px;
     height: 455px;
 }
 
-.film_list_item_info {
+.film_item_info {
  display: flex;
     justify-content: space-between;
 }
 
-.film_list_item_name {
+.film_item_name {
     margin-top: 20px;
     color: #FFF;
     font-family: Montserrat;
@@ -26,7 +26,7 @@
     opacity: 0.699999988079071;
 }
 
-.film_list_item_year {
+.film_item_year {
     width: 66px;
     margin-top: 20px;
     padding-top: 2px;
@@ -43,7 +43,7 @@
     opacity: 0.699999988079071;
 }
 
-.film_list_item_genres {
+.film_item_genres {
     margin-top: 8px;
     color: #FFF;
     font-family: Montserrat;
