--- a/src/components/film-list-item/film-list-item.css
+++ b/src/components/film-list-item/film-list-item.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 50px;
+    position: relative;
 }
 
 .film_item_img {
@@ -52,4 +53,110 @@
     font-weight: 500;
     line-height: normal;
     opacity: 0.5;
+}
+
+.film_item_button {
+    opacity: 0;
+    position: absolute;
+    top: 10px;
+    left: 269px;
+    width: 46px;
+    height: 46px;
+    border-radius: 50%;
+    z-index: 2;
+    background: url('./img/group2.png');
+    padding: 0;
+    margin: 0;
+    pointer-events: none;
+}
+
+.film_item_container:hover .film_item_button {
+    opacity: 1;
+    transition: 0.5s;
+    pointer-events: all;
+}
+
+.film_button_container {
+    width: 190px;
+    height: 111px;
+    opacity: 0;
+    position: relative;
+    left: -150px;
+    pointer-events: none;
+    display: flex;
+    flex-direction: column;
+    flex-shrink: 0;
+    border-radius: 4px;
+    background: rgba(35, 35, 35, 0.92);
+    box-shadow: 0px 10px 50px 0px rgba(0, 0, 0, 0.10), 0px 10px 20px 0px rgba(0, 0, 0, 0.10), 0px 2px 10px 0px rgba(0, 0, 0, 0.10), 0px 0px 2px 0px rgba(0, 0, 0, 0.10);
+    backdrop-filter: blur(13.591408729553223px);
+}
+
+.film_item_button:hover .film_button_container {
+    opacity: 1;
+    transition: 0.5s;
+    pointer-events: all;
+}
+
+.menu_item_button {
+    width: 11px;
+    height: 12px;
+    padding: 0;
+    border: none;
+    font: inherit;
+    color: inherit;
+    position: absolute;
+    top:10px;
+    left: 165px;
+}
+
+.edit_button_item {
+    border: none;
+    font: inherit;
+    color: inherit;
+    margin-top: 29px;
+    width: 190px;
+    height: 34px;
+    color: #FFF;
+    font-family: Montserrat;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    flex-shrink: 0;
+    background: rgba(35, 35, 35, 0.92);
+    box-shadow: 0px 10px 50px 0px rgba(0, 0, 0, 0.10), 0px 10px 20px 0px rgba(0, 0, 0, 0.10), 0px 2px 10px 0px rgba(0, 0, 0, 0.10), 0px 0px 2px 0px rgba(0, 0, 0, 0.10);
+    backdrop-filter: blur(13.591408729553223px);
+}
+
+.delete_button_item {
+    border: none;
+    font: inherit;
+    color: inherit;
+    width: 190px;
+    height: 34px;
+    color: #FFF;
+    font-family: Montserrat;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    flex-shrink: 0;
+    background: rgba(35, 35, 35, 0.92);
+    box-shadow: 0px 10px 50px 0px rgba(0, 0, 0, 0.10), 0px 10px 20px 0px rgba(0, 0, 0, 0.10), 0px 2px 10px 0px rgba(0, 0, 0, 0.10), 0px 0px 2px 0px rgba(0, 0, 0, 0.10);
+    backdrop-filter: blur(13.591408729553223px);
+}
+
+.edit_button_item:hover {
+    cursor: pointer;
+    background: #F65261;
+    box-shadow: 0px 10px 50px 0px rgba(0, 0, 0, 0.10), 0px 10px 20px 0px rgba(0, 0, 0, 0.10), 0px 2px 10px 0px rgba(0, 0, 0, 0.10);
+    backdrop-filter: blur(13.591408729553223px);
+}
+
+.delete_button_item:hover {
+    cursor: pointer;
+    background: #F65261;
+    box-shadow: 0px 10px 50px 0px rgba(0, 0, 0, 0.10), 0px 10px 20px 0px rgba(0, 0, 0, 0.10), 0px 2px 10px 0px rgba(0, 0, 0, 0.10);
+    backdrop-filter: blur(13.591408729553223px);
 }
