Implemented the function of deleting, adding and viewing information

--- a/src/components/add-movie-form/add-form/add-form.css
+++ b/src/components/add-movie-form/add-form/add-form.css
@@ -64,3 +64,12 @@
     font: inherit;
     color: inherit;
 }
+
+.add_container {
+    width: 976px;
+    height: 917px;
+    flex-shrink: 0;
+    background: #232323;
+    margin: 0 auto;
+    opacity: 1;
+}
