--- a/src/components/film-list/film-list.css
+++ b/src/components/film-list/film-list.css
@@ -1,7 +1,7 @@
 .film_list {
     display: flex;
-    justify-content: space-between;
-    align-content: space-between;
+    justify-content: start;
+    gap: 55px;
     flex-wrap: wrap;
     margin-top: 28px;
     margin-left: 59px;
